--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
+		"sveltekit-modal": "^1.0.16",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"axios": "^1.7.7",
+		"ical.js": "^2.1.0",
 		"icalendar": "^0.7.1",
-		"node-cron": "^3.0.3"
+		"node-cron": "^3.0.3",
+		"svelte-preprocess": "^6.0.2"
 	}
 }
