--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"autoprefixer": "^10.4.20",
+		"daisyui": "^4.12.10",
+		"postcss": "^8.4.47",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
 		"sveltekit-modal": "^1.0.16",
+		"tailwindcss": "^3.4.13",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/supabase-js": "^2.45.4",
 		"@sveltejs/adapter-vercel": "^5.4.4",
 		"axios": "^1.7.7",
 		"ical.js": "^2.1.0",
 		"icalendar": "^0.7.1",
-		"node-cron": "^3.0.3",
 		"svelte-preprocess": "^6.0.2"
 	}
 }
