--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.45.4",
 		"@sveltejs/adapter-vercel": "^5.4.4",
+		"@vercel/analytics": "^1.3.1",
 		"axios": "^1.7.7",
 		"ical.js": "^2.1.0",
 		"icalendar": "^0.7.1",
