--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.10",
 		"postcss": "^8.4.47",
+		"saos": "^1.3.1",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
 		"sveltekit-modal": "^1.0.16",
